syntax = "proto3";

package record1;

service SendRPC {
    rpc AddRecord (Record) returns (RecordReceipt){}
}

message RecordHeaders {
    string type = 1;
    string version = 2;
    string uuid = 3;
    int32 timestamp = 4;
    bytes payload_hash = 5;
    bytes source_hash = 6;
    bytes metadata_hash = 7;
}

message SourceInfo {
    string id = 1;
    string address = 2;
    bytes certificate = 3;
    bytes metadata = 4;
}

message Record {
    RecordHeaders headers = 1;
    SourceInfo source = 2;
    bytes hash = 3;
    bytes payload = 4;
    bytes metadata = 5;
    bytes signature = 6;
}

message RecordReceipt {
    bool ok = 1;
}

